--- a/index.html
+++ b/index.html
@@ -3,28 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exzeraz</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="css/navigationbar.css">
-    <link rel="stylesheet" href="css/grid.css">
+    <title>SHOPPING</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="navbar">
-        <a href="" class="home-button">EXZERAZ</a>
-        <ul>
-            <li class="nav-hover"><a href="" class="navbar-button home-button-2 nav-hover">EXZERAZ</a></li>
-            <li class="nav-hover"><a href="" class="navbar-button nav-hover">COMMUNITY</a></li>
-            <li class="nav-hover"><a href="" class="navbar-button nav-hover">WORK</a></li>
-            <li class="nav-hover"><a href="" class="navbar-button nav-hover">ABOUT</a></li>
-            <li class="nav-hover"><a href="" class="navbar-button nav-hover">CONTACT</a></li>
-        </ul>
-    </div>
-    <div class="container">
-        <div class="items left-menu">left</div>
-        <div class="items content">
-            <h2>WELCOME EXZERAZ WEBSITE</h2>
-            <p></p>
-            <img src="images/R.jpg">
+    <div class="navigationbar">
+        <div class="navbar-top">
+            <p class="nav-top-home">ยินดีต้อนรับ</p>
+                <div class="nav-top-menu-right">
+                    <a href="" class="right-a nav-r-1">เข้าสู่ระบบ</a>
+                    <a href="" class="right-a nav-r-2">สมัครสมาชิก</a>
+                </div>
+        </div>
+        <div class="navbar">
+            <li><a href="" class="nav-home">หน้าแรก</a></li>
+            <div class="nav-search-box">
+                <form action="" class="nav-search-form">
+                        <input type="text" class="nav-search" placeholder="ค้นหาสินค้าที่นี่ ?">
+                        <button type="submit" class="nav-search-button">
+                            <img src="img/search.svg" width="18">
+                        </button>
+                </form>
+                <a href="" class="nav-right">
+                    <img src="img/pushcart.svg" width="40" class="pushcart">
+                </a>
+            </div>
         </div>
     </div>
 </body>
