--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="slide-container">
         <div class="image-container" id="image-container">
-            <img class="images" src="https://images.unsplash.com/photo-1707845690193-ec178cf78041?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" >
-            <img class="images" src="https://images.unsplash.com/photo-1708281789753-a414433ea272?q=80&w=2095&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" >
-            <img class="images" src="https://images.unsplash.com/photo-1682686579688-c2ba945eda0e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" >
-            <img class="images" src="https://images.unsplash.com/photo-1682687221175-fd40bbafe6ca?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" >
+            <img class="images" src="" >
+            <img class="images" src="" >
+            <img class="images" src="" >
+            <img class="images" src="" >
         </div>
 
         <div class="dots">
